# PlayTrack

./: README.md  manage.py  pyproject.toml
PlayTrack/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py
main/static/main/: style.css
main/templates/main/: base.html  home.html
main/templates/main/partials/: _navbar.html
playtrack/: asgi.py  settings.py  urls.py  wsgi.py
templates/registration/: login.html
